@@ -9,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <name>SimpleEcommerceSite</name>
     <packaging>war</packaging>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -18,11 +17,35 @@
     </properties>
 
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.yusuf</groupId>-->
+<!--            <artifactId>persistence</artifactId>-->
+<!--            <version>0.9.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <type>pom</type>-->
+<!--            <systemPath>C:/Users/tipil/.m2/repository/com/yusuf/persistence/0.9.0/persistence-0.9.0.pom</systemPath>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.2.0</version>
+<!--            <scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>javax.enterprise</groupId>
@@ -75,11 +98,6 @@
             <artifactId>commons-crypto</artifactId>
             <version>1.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.owasp.esapi</groupId>
-            <artifactId>esapi</artifactId>
-            <version>2.5.3.1</version>
-        </dependency>
 
     </dependencies>
 
@@ -92,12 +110,55 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version> <!-- Adjust the version if needed -->
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+                    <!-- other configurations -->
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+<!--            <plugin>-->
+<!--            <groupId>org.codehaus.cargo</groupId>-->
+<!--            <artifactId>cargo-maven3-plugin</artifactId>-->
+<!--            <version>1.10.8</version>-->
+<!--            <configuration>-->
+<!--                <container>-->
+<!--                    <containerId>tomcat9x</containerId>-->
+<!--                    <type>installed</type>-->
+<!--                </container>-->
+
+<!--                <deployables>-->
+<!--                    <deployable>-->
+<!--                        <artifactId>simpleecommercesite</artifactId>-->
+<!--                        <groupId>com.may</groupId>-->
+<!--                        <type>war</type>-->
+<!--                        <location>${project.build.directory}/${project.build.finalName}.war</location>-->
+<!--                        <pingURL>http://127.0.0.1:8080/APP</pingURL>-->
+<!--                    </deployable>-->
+<!--                </deployables>-->
+<!--                <configuration>-->
+<!--                    <type>existing</type>-->
+<!--                    <home>C://Program Files//apache-tomcat-9.0.84</home>-->
+<!--                </configuration>-->
+<!--            </configuration>-->
+<!--            <executions>-->
+<!--                <execution>-->
+<!--                    <id>start-server</id>-->
+<!--                    <phase>pre-integration-test</phase>-->
+<!--                    <goals>-->
+<!--                        <goal>start</goal>-->
+<!--                    </goals>-->
+<!--                </execution>-->
+<!--            </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
